midpoint-live-demo/kustomize-base/kubernetes-objects/fakesmtp/deployment.yaml
---
# Source: fake-smtp/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake-smtp
  labels:
    app: fake-smtp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fake-smtp
  template:
    metadata:
      labels:
        app: fake-smtp
        release: release-name
    spec:
      containers:
        - name: fake-smtp
          image: maildev/maildev
          imagePullPolicy: IfNotPresent
          ports:
          - name: web 
            containerPort: 1080
          - name: smtp
            containerPort: 1025
            protocol: TCP
