midpoint-live-demo/kustomize-base/kubernetes-objects/fakesmtp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake-smtp
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
#  ingressClassName: haproxy
  tls:
    - hosts:
        - demo.example.com
      secretName: cert-mp-demo
  rules:
    - host: demo.example.com
      http:
        paths:
          - path: /fake
            pathType: Prefix
            backend:
              service:
                name: fake-smtp-web
                port:
                   number: 1080
